# zero_new

apps/tizen-analyze-screen/: .gitignore  README.md  STATUS.md
apps/tizen-analyze-screen/mock/: mock_llm_server.py  mock_vlm_server.py  stub_tizenscreenshot.sh
apps/tizen-analyze-screen/postprocess/: Cargo.toml
apps/tizen-analyze-screen/postprocess/src/: main.rs  stagelog.rs  validate.rs
apps/tizen-analyze-screen/scripts/: deploy_tv.sh  deploy_tv_ssh.sh  test_e2e.sh
apps/tizen-analyze-screen/tizen-app/: config.xml  index.html
apps/tizen-analyze-screen/tizen-app/css/: style.css
apps/tizen-analyze-screen/tizen-app/js/: config.js  main.js
apps/tizen-analyze-screen/zeroclaw/config/: config.toml
apps/tizen-analyze-screen/zeroclaw/tools-mcp/: Cargo.toml
apps/tizen-analyze-screen/zeroclaw/tools-mcp/src/: main.rs
apps/tizen-analyze-screen/zeroclaw/workspace/: SOUL.md
crates/zeroclaw-channels/src/orchestrator/: mod.rs
